unpackaged/main/default/objects/Sanctions__c/Sanctions__c.object-meta.xml
<CustomObject>
    <label>Sanction</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Sanction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sanctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>