unpackaged/main/default/objects/Sanctions__c/fields/Additional_unannounced_inspections__c.field-meta.xml
<CustomField>
    <fullName>Additional_unannounced_inspections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional unannounced inspections</label>
    <type>Checkbox</type>
</CustomField>