unpackaged/main/default/objects/Sanctions__c/fields/Additional_Visit__c.field-meta.xml
<CustomField>
    <fullName>Additional_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Visit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Application__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Additional Visit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Sanctions</relationshipLabel>
    <relationshipName>Sanctions</relationshipName>
    <type>Lookup</type>
</CustomField>