unpackaged/main/default/objects/Sanctions__c/fields/Additional_Visit_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Visit_Required__c</fullName>
    <label>Additional Visit Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>