unpackaged/main/default/objects/Sanctions__c/fields/Administrator__c.field-meta.xml
<CustomField>
    <fullName>Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Auto-populated with the user who created the sanction</inlineHelpText>
    <label>Administrator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sanctions</relationshipName>
    <type>Lookup</type>
</CustomField>