unpackaged/main/default/objects/Sanctions__c/fields/Approver_Certifier__c.field-meta.xml
<CustomField>
    <fullName>Approver_Certifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver (Certifier)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sanctions2</relationshipName>
    <type>Lookup</type>
</CustomField>