unpackaged/main/default/objects/Sanctions__c/fields/Conditional_application__c.field-meta.xml
<CustomField>
    <fullName>Conditional_application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conditional application</label>
    <type>Checkbox</type>
</CustomField>