unpackaged/main/default/objects/Sanctions__c/fields/Conditional_renewal__c.field-meta.xml
<CustomField>
    <fullName>Conditional_renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conditional renewal</label>
    <type>Checkbox</type>
</CustomField>