unpackaged/main/default/objects/Sanctions__c/fields/Documentation__c.field-meta.xml
<CustomField>
    <fullName>Documentation__c</fullName>
    <inlineHelpText>Link to the Google Drive folder containing related paperwork</inlineHelpText>
    <label>Documentation</label>
    <type>Url</type>
</CustomField>