unpackaged/main/default/objects/Sanctions__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>IF(ISPICKVAL(Period__c, &quot;1 week&quot;), Start_Date__c + 7, 
			IF(ISPICKVAL(Period__c, &quot;2 weeks&quot;), Start_Date__c + 14,
			IF(ISPICKVAL(Period__c, &quot;1 month&quot;), Start_Date__c + 30, 
			IF(ISPICKVAL(Period__c, &quot;3 months&quot;), Start_Date__c + 90,
						IF(ISPICKVAL(Period__c, &quot;6 months&quot;), Start_Date__c + 180, NULL)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Adds the period of the sanction to the start date.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>