unpackaged/main/default/objects/Sanctions__c/fields/Formal_warning__c.field-meta.xml
<CustomField>
    <fullName>Formal_warning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Formal warning</label>
    <type>Checkbox</type>
</CustomField>