unpackaged/main/default/objects/Sanctions__c/fields/Further_Information__c.field-meta.xml
<CustomField>
    <fullName>Further_Information__c</fullName>
    <label>Further Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>