unpackaged/main/default/objects/Sanctions__c/fields/Informal_advice__c.field-meta.xml
<CustomField>
    <fullName>Informal_advice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Informal advice</label>
    <type>Checkbox</type>
</CustomField>