unpackaged/main/default/objects/Sanctions__c/fields/Investigating_Manager__c.field-meta.xml
<CustomField>
    <fullName>Investigating_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigating Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sanctions1</relationshipName>
    <type>Lookup</type>
</CustomField>