unpackaged/main/default/objects/Sanctions__c/fields/Number_of_additional_visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_additional_visits__c</fullName>
    <inlineHelpText>If appllicable</inlineHelpText>
    <label>Number of Additional Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>