unpackaged/main/default/objects/Sanctions__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>Amount of time the sanction is applied for</description>
    <label>Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 week</fullName>
            </value>
            <value>
                <fullName>2 weeks</fullName>
            </value>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>12 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>