unpackaged/main/default/objects/Sanctions__c/fields/Permanent_withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Permanent_withdrawal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permanent withdrawal</label>
    <type>Checkbox</type>
</CustomField>