unpackaged/main/default/objects/Sanctions__c/fields/Report_to_authorities__c.field-meta.xml
<CustomField>
    <fullName>Report_to_authorities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report to authorities</label>
    <type>Checkbox</type>
</CustomField>