unpackaged/main/default/objects/Sanctions__c/fields/Sanction__c.field-meta.xml
<CustomField>
    <fullName>Sanction__c</fullName>
    <label>Sanction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Informal advice</fullName>
            </value>
            <value>
                <fullName>Formal warning</fullName>
            </value>
            <value>
                <fullName>Additional unannounced inspections</fullName>
            </value>
            <value>
                <fullName>Conditional renewal</fullName>
            </value>
            <value>
                <fullName>Conditional application</fullName>
            </value>
            <value>
                <fullName>Temporary withdrawal</fullName>
            </value>
            <value>
                <fullName>Permanent withdrawal</fullName>
            </value>
            <value>
                <fullName>Report to authorities</fullName>
            </value>
            <value>
                <fullName>Special measures</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>