unpackaged/main/default/objects/Sanctions__c/fields/Selected_Sanctions__c.field-meta.xml
<CustomField>
    <fullName>Selected_Sanctions__c</fullName>
    <formula>IF(Informal_advice__c = TRUE, &quot;Informal advice:&quot;, &quot;&quot;) 
+ IF(Formal_warning__c = TRUE, &quot;Formal warning:&quot;,&quot;&quot;)
+ IF(Additional_unannounced_inspections__c = TRUE, &quot;Additional unannounced inspections:&quot;,&quot;&quot;)
+ IF(Conditional_renewal__c = TRUE, &quot;Conditional renewal:&quot;,&quot;&quot;)
+ IF(Conditional_application__c = TRUE, &quot;Conditional application:&quot;,&quot;&quot;)
+ IF(Temporary_withdrawal__c = TRUE, &quot;Temporary withdrawal:&quot;,&quot;&quot;)
+ IF(Permanent_withdrawal__c = TRUE, &quot;Permanent withdrawal:&quot;,&quot;&quot;)
+ IF(Report_to_authorities__c = TRUE, &quot;Report to authorities:&quot;,&quot;&quot;)
+ IF(Special_measures__c = TRUE, &quot;Special measures:&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Selected sanctions appear here in text format</inlineHelpText>
    <label>Selected Sanctions</label>
    <type>Text</type>
</CustomField>