unpackaged/main/default/objects/Sanctions__c/fields/Site_Under_Sanction__c.field-meta.xml
<CustomField>
    <fullName>Site_Under_Sanction__c</fullName>
    <label>Site Under Sanction</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sanctions</relationshipLabel>
    <relationshipName>Sanctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>