unpackaged/main/default/objects/Sanctions__c/fields/Special_measures__c.field-meta.xml
<CustomField>
    <fullName>Special_measures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special measures</label>
    <type>Checkbox</type>
</CustomField>