unpackaged/main/default/objects/Sanctions__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <inlineHelpText>Autopopulated with the date the sanction was created</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>