unpackaged/main/default/objects/Sanctions__c/fields/Temporary_withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Temporary_withdrawal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temporary withdrawal</label>
    <type>Checkbox</type>
</CustomField>