unpackaged/main/default/objects/Sanctions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Site_Under_Sanction__c</columns>
    <columns>Administrator__c</columns>
    <columns>Approved__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Period__c</columns>
    <columns>Selected_Sanctions__c</columns>
    <columns>Investigating_Manager__c</columns>
    <columns>Approver_Certifier__c</columns>
    <columns>Date_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approver_Certifier__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Investigating_Manager__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>