unpackaged/main/default/objects/Sanctions__c/listViews/Sanctions_Abbie.listView-meta.xml
<ListView>
    <fullName>Sanctions_Abbie</fullName>
    <columns>Site_Under_Sanction__c</columns>
    <columns>Additional_Visit_Required__c</columns>
    <columns>Period__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Sanctions</label>
    <sharedTo>
        <group>Compliance</group>
    </sharedTo>
</ListView>