unpackaged/main/default/objects/Sanctions__c/listViews/Sanctions_Certifiers.listView-meta.xml
<ListView>
    <fullName>Sanctions_Certifiers</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Site_Under_Sanction__c</columns>
    <columns>Administrator__c</columns>
    <columns>Approved__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Period__c</columns>
    <columns>Selected_Sanctions__c</columns>
    <columns>Approver_Certifier__c</columns>
    <columns>Date_Approved__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approver_Certifier__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Date_Approved__c</field>
        <operation>equals</operation>
    </filters>
    <label>Sanctions-Certifiers</label>
    <sharedTo>
        <group>Certifiers</group>
    </sharedTo>
</ListView>